Closed Bug 1385961 Opened 8 years ago Closed 8 years ago

Glitch on scroll

Categories

(Core :: Graphics: Layers, defect)

56 Branch
x86
Windows 10
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 --- unaffected
firefox56 --- disabled
firefox57 --- verified

People

(Reporter: manuc66, Assigned: dvander)

References

Details

(Keywords: regression)

Attachments

(4 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:56.0) Gecko/20100101 Firefox/56.0 Build ID: 20170730100307 Steps to reproduce: - got to https://fritz-c.github.io/react-sortable-tree/ - fully deployed every nodes - scroll to the top - take the first node and tries to drop it at the end https://github.com/webcompat/web-bugs/issues/8249#issuecomment-318938217 Actual results: The viewport automatically scroll and produced graphical gliches See: https://github.com/webcompat/web-bugs/issues/8249#issuecomment-318938217 Expected results: The viewport automatically scroll without rendering gliches
This is reproducible on some Windows 10 machines with GPU.
Any chance of a video/image of when the problem happens, as I don't see it? Since it seems device specific, can you attach the about:support of the configuration that does have this problem?
Component: Graphics → Panning and Zooming
Attached file about:support content
(In reply to Milan Sreckovic [:milan] from comment #2) > Any chance of a video/image of when the problem happens, as I don't see it? > Since it seems device specific, can you attach the about:support of the > configuration that does have this problem? Done. Tell me if you need something else.
Attachment #8892129 - Attachment description: ScreenCast of the problme as a gif → ScreenCast of the problem as a gif
Thanks. Probably not the right component that I changed it to, but, I'll let :kats confirm.
Flags: needinfo?(bugmail)
Blocks: 1386117
on Windows, I filed Bug 1386117.
(In reply to Emmanuel Counasse from comment #1) > This is reproducible on some Windows 10 machines with GPU. Just to be clear, did you only reproduce this on Windows? Or did you also reproduce it on Linux? The UA string in comment 0 says Linux.
Flags: needinfo?(bugmail) → needinfo?(manuc66)
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #9) > (In reply to Emmanuel Counasse from comment #1) > > This is reproducible on some Windows 10 machines with GPU. > > Just to be clear, did you only reproduce this on Windows? Or did you also > reproduce it on Linux? The UA string in comment 0 says Linux. I did not manage to reproduce it on a Linux desktop, but I made the report from a Linux Desktop.
Flags: needinfo?(manuc66)
Thanks. In that case bug 1386117 is just a dupe of this one, I'll fold it back in. (In reply to Alice0775 White from bug 1386117 comment 0): > Regression window: > https://hg.mozilla.org/integration/mozilla-inbound/ > pushloghtml?fromchange=26b15288e8e8b9b60de3e42bc8de3a4288dbfa35&tochange=392e > d89ec2730a48d10b1cec741e86a242d28aa3 > > Triggered by: > 392ed89ec273 David Anderson — Enable Advanced Layers on Nightly Windows 8+ > builds. (bug 1375743, r=milan) David, can you take a look?
Blocks: 1375743
No longer blocks: 1386117
Status: UNCONFIRMED → NEW
Component: Panning and Zooming → Graphics: Layers
Ever confirmed: true
Flags: needinfo?(dvander)
Keywords: regression
OS: Unspecified → Windows 10
Hardware: Unspecified → x86
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Flags: needinfo?(dvander)
The visible region on a PaintedLayer is wrong, causing transparent pixels to be interpreted as opaque. Thus the background isn't getting recomposited when it should, and everything blurs together.
The bug is in how AL handles MayResample() on PaintedLayer. Normally when MayResample() is true the PaintedLayer is supposed to expand its visible region to be the bounds of the visible region. In the old compositor, this ran after occlusion culling, so culling used the correct region and drawing used the expanded region. Advanced Layers is running this code *before* occlusion culling, which is not necessarily correct: the newly included pixels may not be opaque even if the opaque flag is set.
Attached patch fixSplinter Review
This makes AL behave more like the old compositor: we use the given region during occlusion culling, but draw with the full bounds if we might resample.
Attachment #8892634 - Flags: review?(matt.woodrow)
Attachment #8892634 - Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/75b15c752105 Handle resampled painted layers after occlusion culling. (bug 1385961, r=mattwoodrow)
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
I can confirm that the issue is solved in at least the 57.0a (2017-08-04) Firefox Nightly. Thanks
I'm confirming that bug is fixed, starting in Mozilla Firefox Nightly 57.0a1 (2017-08-03), so I'm marking this bug as VERIFIED. Thanks.
Status: RESOLVED → VERIFIED
QA Contact: Virtual
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: