Handle resampled painted layers after occlusion culling. (bug 1385961, r=mattwoodrow)

--HG--
extra : rebase_source : 239abc310f202c527f0f1cb64f5d2d01cd3be15a